# SE4010-CTSE-Assignment-2

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/skills/: agent-design.md  langraph-orchestration.md  mcp-integration.md  state-management.md  testing-evaluation.md  tool-development.md
data/: codesentinel.db
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
reports/: audit_sample_repo0_2026-04-17_154021.md  audit_sample_repo0_2026-04-17_154022.md  audit_sample_repo0_2026-04-17_154302.md  audit_sample_repo0_2026-04-17_154305.md  audit_sample_repo0_2026-04-17_154501.md  audit_sample_repo0_2026-04-17_154502.md  audit_sample_repo0_2026-04-17_165556.md  audit_sample_repo0_2026-04-17_165558.md  audit_unknown_2026-04-17_154021.md  audit_unknown_2026-04-17_154022.md  audit_unknown_2026-04-17_154302.md  audit_unknown_2026-04-17_154305.md  audit_unknown_2026-04-17_154501.md  audit_unknown_2026-04-17_154502.md  audit_unknown_2026-04-17_165556.md  audit_unknown_2026-04-17_165558.md
src/: __init__.py  api.py  config.py  graph.py  main.py  state.py
src/agents/: __init__.py  code_quality.py  orchestrator.py  refactoring.py  security.py
src/db/: __init__.py  queries.py  schema.sql  seed_vuln_patterns.py
src/mcp/: __init__.py  sqlite_client.py
tests/: __init__.py  conftest.py  llm_judge.py  test_code_quality.py  test_integration.py  test_orchestrator.py  test_refactoring.py  test_repo_cloner.py  test_security.py  test_tools.py  test_vuln_knowledge_base.py
(+12 files in other folders)
